Fix heading and intro spacing.

--- a/css/styles.css
+++ b/css/styles.css
@@ -61,8 +61,11 @@ body, html {
 	font-family: 'Raleway', sans-serif;
 }
 
+.title-row {
+	padding: 5px;
+}
+
 .page-title {
-	margin: 5px 1% 0px 0px;
 	background-color: #CE5142;
 	padding:15px;
 	border-radius: 6px;
@@ -73,7 +76,8 @@ body, html {
 }
 
 .intro-row {
-	margin: 10px 0px 30px 0px;
+	padding: 5px;
+	padding-bottom: 40px;
 }
 
 .intro-words-about {
